# zig-cython

./: .gitignore  MANIFEST.in  build.py  meson.build  pyproject.toml  setup.py
.github/workflows/: wheels.yml
include/linux-64bit/: _numpyconfig.h  pyconfig.h
include/linux-aarch64/: pyconfig.h
include/linux-x86_64/: pyconfig.h
include/macos-64bit/: _numpyconfig.h  pyconfig.h
include/macos-arm64/: pyconfig.h
include/windows/: _numpyconfig.h
scripts/: fetch_reference_configs.py
src/zigcython/: __init__.py  _fast.pyx  meson.build
