[project]
name = "zigcython"
version = "0.1.0"
description = "Cython extension cross-compiled with Zig"
readme = "README.md"
authors = [
    { name = "Rishi Kulkarni" }
]
requires-python = ">=3.10"
dependencies = ["numpy"]

[build-system]
requires = ["setuptools>=75", "cython>=3.0", "numpy>=2.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = ["cython>=3.0", "ziglang>=0.15"]
