[project]
name = "zigcython"
version = "0.1.0"
description = "Cython extension cross-compiled with Zig"
readme = "README.md"
authors = [
    { name = "Rishi Kulkarni" }
]
requires-python = ">=3.10"
dependencies = ["numpy>=2.0"]

[build-system]
requires = ["meson-python>=0.17", "meson>=1.5", "cython>=3.0", "numpy>=2.0"]
build-backend = "mesonpy"

[dependency-groups]
dev = ["cython>=3.0", "meson>=1.5", "wheel>=0.42", "ziglang>=0.15"]
